logs/dag_id=dag_with_postgess_v2/run_id=scheduled__2024-11-04T000000+0000/task_id=insert_into_postgres_table/attempt=2.log
[2024-11-06T16:19:59.861+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2024-11-06T16:19:59.915+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgess_v2.insert_into_postgres_table scheduled__2024-11-04T00:00:00+00:00 [queued]>
[2024-11-06T16:19:59.939+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgess_v2.insert_into_postgres_table scheduled__2024-11-04T00:00:00+00:00 [queued]>
[2024-11-06T16:19:59.941+0000] {taskinstance.py:2866} INFO - Starting attempt 2 of 6
[2024-11-06T16:19:59.972+0000] {taskinstance.py:2889} INFO - Executing <Task(PostgresOperator): insert_into_postgres_table> on 2024-11-04 00:00:00+00:00
[2024-11-06T16:19:59.990+0000] {logging_mixin.py:190} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:70 DeprecationWarning: This process (pid=11108) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-11-06T16:19:59.993+0000] {standard_task_runner.py:72} INFO - Started process 11111 to run task
[2024-11-06T16:19:59.991+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgess_v2', 'insert_into_postgres_table', 'scheduled__2024-11-04T00:00:00+00:00', '--job-id', '30', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgress.py', '--cfg-path', '/tmp/tmplgdnosah']
[2024-11-06T16:19:59.995+0000] {standard_task_runner.py:105} INFO - Job 30: Subtask insert_into_postgres_table
[2024-11-06T16:20:00.039+0000] {logging_mixin.py:190} WARNING - /home/***/.local/lib/python3.12/site-packages/***/settings.py:209 DeprecationWarning: The sql_alchemy_conn option in [core] has been moved to the sql_alchemy_conn option in [database] - the old setting has been used, but please update your config.
[2024-11-06T16:20:00.187+0000] {task_command.py:467} INFO - Running <TaskInstance: dag_with_postgess_v2.insert_into_postgres_table scheduled__2024-11-04T00:00:00+00:00 [running]> on host 61aa06b65713
[2024-11-06T16:20:00.192+0000] {logging_mixin.py:190} WARNING - /home/***/.local/lib/python3.12/site-packages/***/settings.py:470 DeprecationWarning: The sql_alchemy_conn option in [core] has been moved to the sql_alchemy_conn option in [database] - the old setting has been used, but please update your config.
[2024-11-06T16:20:00.712+0000] {taskinstance.py:3132} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Adithya' AIRFLOW_CTX_DAG_ID='dag_with_postgess_v2' AIRFLOW_CTX_TASK_ID='insert_into_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2024-11-04T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-11-04T00:00:00+00:00'
[2024-11-06T16:20:00.727+0000] {taskinstance.py:731} INFO - ::endgroup::
[2024-11-06T16:20:00.808+0000] {sql.py:278} INFO - Executing: 
insert into dag_runs(dt,dag_id) values ('2024-11-04','dag_with_postgess_v2)
[2024-11-06T16:20:01.731+0000] {base.py:84} INFO - Retrieving connection 'postgres_localhost'
[2024-11-06T16:20:01.922+0000] {base.py:84} INFO - Retrieving connection 'postgres_localhost'
[2024-11-06T16:20:01.955+0000] {sql.py:544} INFO - Running statement: 
insert into dag_runs(dt,dag_id) values ('2024-11-04','dag_with_postgess_v2), parameters: None
[2024-11-06T16:20:01.966+0000] {taskinstance.py:3311} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 417, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 284, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 489, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 549, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: unterminated quoted string at or near "'dag_with_postgess_v2)"
LINE 2: ...ert into dag_runs(dt,dag_id) values ('2024-11-04','dag_with_...
                                                             ^

[2024-11-06T16:20:02.032+0000] {taskinstance.py:1225} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgess_v2, task_id=insert_into_postgres_table, run_id=scheduled__2024-11-04T00:00:00+00:00, execution_date=20241104T000000, start_date=20241106T161959, end_date=20241106T162002
[2024-11-06T16:20:02.090+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2024-11-06T16:20:02.093+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 30 for task insert_into_postgres_table (unterminated quoted string at or near "'dag_with_postgess_v2)"
LINE 2: ...ert into dag_runs(dt,dag_id) values ('2024-11-04','dag_with_...
                                                             ^
; 11111)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/cli.py", line 116, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3005, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3159, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3183, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 417, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 284, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 489, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 549, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: unterminated quoted string at or near "'dag_with_postgess_v2)"
LINE 2: ...ert into dag_runs(dt,dag_id) values ('2024-11-04','dag_with_...
                                                             ^

[2024-11-06T16:20:02.148+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2024-11-06T16:20:02.199+0000] {taskinstance.py:3895} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-11-06T16:20:02.203+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
